[package]
name = "log-query"
version = "0.1.0"
authors = ["acodispo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chomp = "0.3.1"
handlebars = "3.4.0"
lazy_static = "1.4.0"
regex = "1.3.9"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
simple-error = "0.2.1"
structopt = "0.3.15"